# DiscreteTimeLib

./: .coveragerc  .gitignore  README.md  cov.sh  docs.sh  format.sh  pyproject.toml  script.py  test.sh
.github/workflows/: python-workflow.yml
DiscreteTimeLib/: __init__.py  signals.py  systems.py
docs/: build.sh
docs/demos/: readme_demo.py
docs/source/: DiscreteTimeLib.rst  conf.py  index.rst  modules.rst  signals.rst  systems.rst
tests/: test_signals.py  test_systems.py  utils.py
