[tool.poetry]
name = "DiscreteTimeLib"
version = "0.1.0"
description = "Python library for analysis of discrete time signals and systems"
authors = ["Zahin Zaman <alvii147@gmail.com>"]
license = "BSD-3-Clause License"

[tool.poetry.dependencies]
python = ">=3.8,<3.10"
numpy = "^1.22.3"
pandas = "^1.4.2"
scipy = "^1.8.0"
sympy = "^1.10.1"

[tool.poetry.dev-dependencies]
pytest = "^7.1.1"
coverage = "^6.3.2"
flake8 = "^4.0.1"
black = "^22.3.0"
Sphinx = "^4.5.0"
renku-sphinx-theme = "^0.2.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
